# contrib-checker

./: .gitignore  .mailmap  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASE.md  action.yml  check_contributors.py  pyproject.toml  setup.py
.github/: contrib-metadata-check.yml  metadata-check.yml  test_contributor_check.py
.github/actions/contrib-check/: action.yml
.github/scripts/: check_contributors.py
.github/workflows/: pypi.yml  pytest.yml  test-action.yml
contrib_checker/: __init__.py  cli.py  core.py  github.py  gitlab.py
scripts/: update_version.py
tests/: conftest.py  test_cli.py  test_contrib_checker.py  test_contributor_check.py  test_core.py  test_github.py  test_gitlab.py  test_integration.py
